did some things

--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -32,10 +32,10 @@
                     <MudListExtended T="string" Dense="true">
                         <MudListItemExtended T="string"
                                              Text="@($"Advance distance: {config.CalculationDistance}km")"
-                                             SecondaryText="Represents amount kilometers driven per advance." />
+                                             SecondaryText="Represents total kilometers driven per advance" />
                         <MudListItemExtended T="string"
                                              Text="@($"Gap marge: {config.GapMarge}s")"
-                                             SecondaryText="Represents time gap per score value." />
+                                             SecondaryText="Represents time gap per score value" />
                     </MudListExtended>
 
                     @if (!hideDataMessage)
