--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Practice.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Practice.razor
@@ -15,7 +15,7 @@
                 <MudSpacer />
 
                 <MudButtonGroup Variant="Variant.Text" Color="Color.Tertiary">
-                    <ScreenshotIconButton TargetId="practice-table" Class="btn-sm" />
+                    <ScreenshotIconButton TargetId="practice-table" Colour="Color.Tertiary" Class="btn-sm" />
                     @if (PracticeSession.IsFinished == false && advancedRuns != amountRuns)
                     {
                         <MudTooltip Text="Advance to next run" Placement="Placement.Top" Color="Color.Tertiary">
