--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Qualifying.razor
@@ -17,7 +17,7 @@
                 <MudSpacer />
 
                 <MudButtonGroup Color="Color.Tertiary" Variant="Variant.Text">
-                    <ScreenshotIconButton TargetId="qualy-table" Class="btn-sm" />
+                    <ScreenshotIconButton TargetId="qualy-table" Colour="Color.Tertiary" Class="btn-sm" />
                     @if (QualySession.IsFinished == false && advancedRuns != amountRuns)
                     {
                         <MudTooltip Text="Advance to next run" Placement="Placement.Top" Color="Color.Tertiary">
