--- a/SimTECH/SimTECH/Pages/Entrants/Drivers/Dialogs/DriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Entrants/Drivers/Dialogs/DriverEditor.razor
@@ -94,11 +94,11 @@
     [Parameter] public Driver? Driver { get; set; }
     [Parameter] public List<Trait> Traits { get; set; } = new();
 
-    private EditDriverModel Model;
-    private List<Trait> selectableTraits;
-    private ICollection<object>? selectedTraits { get; set; }
+    EditDriverModel Model;
+    List<Trait> selectableTraits;
+    ICollection<object>? selectedTraits { get; set; }
 
-    private string[] errors = { };
+    string[] errors = { };
 
     protected override void OnInitialized()
     {
