--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -1,4 +1,6 @@
-﻿@inject ProtectedLocalStorage _storage
+﻿@using static SimTECH.Providers.GuideBookProvider;
+
+@inject ProtectedLocalStorage _storage
 @inherits LayoutComponentBase
 
 <MudThemeProvider @bind-IsDarkMode="@isDarkTheme" Theme="@Theme" />
@@ -13,6 +15,30 @@
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Secondary" Edge="Edge.Start" OnClick="ToggleSidebar" />
         <CustomBreadcrumbs />
 
+        @* <MudSpacer />
+
+        <MudExpansionPanels Dense="true" >
+            <MudExpansionPanel @bind-IsExpanded="isHelpOpen" Disabled="@(HelpContent == null)" Dense="true" Style="width: 500px !important">
+                <TitleContent>
+                <div class="d-flex">
+                <MudIconButton Icon="@Icons.Material.Filled.QuestionMark"
+                Variant="Variant.Outlined"
+                Color="Color.Secondary"
+                Size="Size.Small"
+                Disabled="@(HelpContent == null)"
+                OnClick="@(() => isHelpOpen = !isHelpOpen)"
+                Class="ml-auto"/>
+                </div>
+                </TitleContent>
+                <ChildContent>
+                    @if (HelpContent != null)
+                    {
+                        <DynamicComponent Type="@HelpContent" />
+                    }
+                </ChildContent>
+            </MudExpansionPanel>
+        </MudExpansionPanels> *@
+
         <MudSpacer />
 
         <MudToggleIconButton @bind-Toggled="@isDarkTheme"
@@ -26,7 +52,16 @@
             }
         </MudMenu>
 
-        <MudIconButton Href="/guide" Icon="@Icons.Material.Filled.MenuBook" Color="Color.Secondary" />
+        <MudIconButton Href="/guide" Icon="@Icons.Material.Filled.MenuBook" Color="Color.Dark" />
+
+        <MudPopover Open="@isHelpOpen" AnchorOrigin="Origin.BottomLeft" TransformOrigin="Origin.TopRight">
+            @if (HelpContent != null)
+            {
+                <DynamicComponent Type="@HelpContent" />
+            }
+        </MudPopover>
+        <MudIconButton Icon="@Icons.Material.Filled.MenuBook" Color="Color.Secondary" Disabled="@(HelpContent == null)" OnClick="@(() => isHelpOpen = !isHelpOpen)" />
+        
     </MudAppBar>
     <MudDrawer @bind-Open="@drawerOpen"
                ClipMode="DrawerClipMode.Always"
@@ -43,15 +78,29 @@
 </MudLayout>
 
 @code {
+    [CascadingParameter(Name = "PageType")]
+    public Type PageType { get; set; }
+
     MudTheme Theme { get; set; } = CustomThemes.GalacticTheme;
 
     bool drawerOpen = true;
     bool isDarkTheme = true;
+    bool isHelpOpen = false;
 
     Dictionary<string, MudTheme> simThemes = CustomThemes.SimThemes;
 
+    Type? HelpContent { get; set; }
+
+    protected override void OnParametersSet()
+    {
+        if (PageType != HelpContent)
+        {
+            HelpContent = GuideBookProvider.GetHelpContentForPage(PageType);
+        }
+    }
+
     protected override async Task OnAfterRenderAsync(bool firstRender)
-    {   
+    {
         if (firstRender)
         {
             var storedTheme = await _storage.GetAsync<string>("activeTheme");
